--- a/package.json
+++ b/package.json
@@ -9,9 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.94",
+    "@mui/material": "^5.10.0",
+    "@mui/styles": "^5.9.3",
+    "@mui/system": "^5.8.6",
+    "@mui/utils": "^5.8.6",
+    "@tabler/icons": "^1.82.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.2.0",
+    "material-ui-popup-state": "^4.0.1",
     "next": "12.2.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countup": "^6.3.0",
+    "react-dom": "18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "sass": "^1.54.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.19.0",
