--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
