--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "^11.10.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@iconify/react": "^3.2.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.94",
     "@mui/material": "^5.10.0",
@@ -27,13 +28,16 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-countup": "^6.3.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "sass": "^1.54.4",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
