--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-simplemde-v1": "^2.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "sass": "^1.54.4",
