--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons": "^1.82.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.2.0",
+    "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.1",
     "next": "12.2.0",
     "prop-types": "^15.8.1",
@@ -30,6 +31,7 @@
     "react-countup": "^6.3.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.19",
     "react-material-ui-carousel": "^3.4.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
