--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
