--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-countup": "^6.3.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-map-gl": "^7.0.19",
     "react-material-ui-carousel": "^3.4.2",
     "react-perfect-scrollbar": "^1.5.8",
