--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.1",
     "next": "12.3.0",
+    "nuka-carousel": "^5.4.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
