--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "http://AtiQ-Rahman.github.io/bio-diversity",
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server/server.js",
     "build": "next build",
     "preDeploy": "next export",
     "deploy": "node deploy.js",
@@ -16,6 +16,16 @@
     "@emotion/cache": "^11.10.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
+    "yargs": "^17.5.1",
     "@iconify/react": "^3.2.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.94",
