--- a/package.json
+++ b/package.json
@@ -16,16 +16,6 @@
     "@emotion/cache": "^11.10.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
-    "yargs": "^17.5.1",
     "@iconify/react": "^3.2.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.94",
@@ -35,13 +25,23 @@
     "@mui/utils": "^5.8.6",
     "@tabler/icons": "^1.82.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.2.0",
     "gh-pages": "^4.0.0",
     "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "next": "12.3.0",
+    "notistack": "^2.0.5",
     "nuka-carousel": "^5.4.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -61,13 +61,11 @@
     "sass": "^1.54.9",
     "shelljs": "^0.8.5",
     "slick-carousel": "^1.8.1",
+    "yargs": "^17.5.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0"
-  },
-  "engines": {
-    "node": "16.16.0"
   }
 }
