--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-drag-drop-files": "^2.3.7",
     "react-map-gl": "^7.0.19",
     "react-material-ui-carousel": "^3.4.2",
+    "react-papaparse": "^4.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -61,6 +62,7 @@
     "sass": "^1.54.9",
     "shelljs": "^0.8.5",
     "slick-carousel": "^1.8.1",
+    "xlsx": "^0.18.5",
     "yargs": "^17.5.1",
     "yup": "^0.32.11"
   },
