--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "moment": "^2.29.4",
+    "shelljs": "^0.8.5",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "yargs": "^17.5.1"
