--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "next": "12.3.0",
+    "node-sass": "^7.0.3",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -57,7 +58,7 @@
     "react-simplemde-v1": "^2.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
-    "sass": "^1.54.9",
+    "sass": "^1.55.0",
     "shelljs": "^0.8.5",
     "slick-carousel": "^1.8.1",
     "xlsx": "^0.18.5",
