--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "moment": "^2.29.4",
-    "shelljs": "^0.8.5",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "2",
+    "shelljs": "^0.8.5",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
