--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://AtiQ-Rahman.github.io/bio-diversity",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx next build",
     "preDeploy": "next export",
     "deploy": "node deploy.js",
     "start": "next start",
@@ -40,7 +40,6 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "next": "12.3.0",
-    "node-sass": "^7.0.3",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
