--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-color": "^2.19.3",
     "react-countup": "^6.3.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
