--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/system": "^5.8.6",
     "@mui/utils": "^5.8.6",
     "@tabler/icons": "^1.82.0",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
