--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,15 +1,19 @@
-- name: FTP Deploy
-  # You may pin to the exact commit or the version.
-  # uses: SamKirkland/FTP-Deploy-Action@415886224489d755c333d1e46c7804601761000f
-  uses: SamKirkland/FTP-Deploy-Action@3.1.2
-  with:
-    # Deployment destination server & path. Formatted as protocol://domain.com:port/full/destination/path/
-    ftp-server: 
-    # FTP account username
-    ftp-username: 
-    # FTP account password
-    ftp-password: 
-    # The local folder to copy, defaults to root project folder
-    local-dir: # optional, default is ./
-    # Passes through options into git-ftp
-    git-ftp-args: # optional
+name: bio_deploy
+
+on:
+  push:
+    branches: [ master, Development ]
+jobs:
+  Make:
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: down
+        uses: MitchWind/ftp-deploy@master
+        with:
+            server: "66.29.151.71"
+            username: "bio"
+            password: bio_diversity
+            server_dir: "/bio-diversity"
