--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,16 +4,19 @@ on:
   push:
     branches: [ master, Development ]
 jobs:
-  Make:
+  build:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
       - name: Checkout
         uses: actions/checkout@main
-      - name: down
+      - name: Connect_to_server
         uses: MitchWind/ftp-deploy@master
         with:
-            server: "66.29.151.71"
-            username: "bio"
+            server: 66.29.151.71
+            username: bio
             password: bio_diversity
-            server_dir: "/bio-diversity"
+            node-version: 16.13.1
+        
+      - run: yarn install
+      - run: yarn dev --if-present
