--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Connect_to_server
         uses: MitchWind/ftp-deploy@master
         with:
-            server: 66.29.151.71
+            server: server1.biodiversitybangladesh.du.ac.bd
             username: bio
-            password: bio_diversity
+            password: bio-diversity
             node-version: 16.13.1
         
       - run: yarn install
