--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Connect_to_server
         uses: MitchWind/ftp-deploy@master
         with:
-            server: server1.biodiversitybangladesh.du.ac.bd
+            server: 66.29.151.71
             username: bio
             password: bio-diversity
             node-version: 16.13.1
