--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,7 +15,7 @@ jobs:
         with:
             server: 66.29.151.71
             username: bio
-            password: bio-diversity
+            password: /bio-diversity/
             node-version: 16.13.1
         
       - run: yarn install
