--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,12 +11,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main
       - name: Connect_to_server
-        uses: MitchWind/ftp-deploy@master
+        uses: SamKirkland/FTP-Deploy-Action@3.1.2
         with:
             server: 66.29.151.71
             username: bio
             password: bio_diversity
-            server-dir: /bio-diversity/
+            server-dir: bio-diversity/
         
       - run: yarn install
       - run: yarn dev --if-present
