--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Connect_to_server
         uses: SamKirkland/FTP-Deploy-Action@3.1.2
         with:
-            ftp-server: 66.29.151.71
+            ftp-server: ftp://66.29.151.71
             ftp-username: bio
             ftp-password: bio_diversity
-            server-dir: bio-diversity/
+            local-dir: bio-diversity/
         
       - run: yarn install
       - run: yarn dev --if-present
