--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://AtiQ-Rahman.github.io/bio-diversity",
   "scripts": {
     "dev": "next dev",
-    "build": "npx next build",
+    "build": "next build",
     "preDeploy": "next export",
     "deploy": "node deploy.js",
     "start": "next start",
@@ -40,7 +40,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "next": "12.3.0",
+    "next": "13.0.0",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
