--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ jobs:
             ftp-server: ftp://66.29.151.71
             ftp-username: bio
             ftp-password: bio_diversity
-            # local-dir: /home/bio/bio-diversity/
+            local-dir: bio-diversity
         
       - run: yarn install
       - run: yarn dev --if-present
