--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,8 +16,8 @@ jobs:
             server: ftp://66.29.151.71
             username: bio
             password: bio_diversity
-            local-dir: out/
-            server-dir: /home/bio/bio-diversity/out
+            local-dir: ./out/
+            server-dir: /home/bio/bio-diversity/out/
         
       - run: yarn install
       - run: yarn dev --if-present
