changed directory again

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ jobs:
             server: ftp://66.29.151.71
             username: bio
             password: bio_diversity
-            local-dir: ./out/
+            local-dir: out/
             server-dir: /home/bio/bio-diversity/out/
         
       - run: yarn install
