--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Connect_to_server
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-            server: ftp://66.29.151.71
+            server: 66.29.151.71
             username: bio
             password: bio_diversity
             server-dir: /home/bio/bio-diversity/
