--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - name: Checkout & Deploy
         uses: actions/checkout@main
-      - run: yarn install node-fetch@2
+      - run: npm install node-fetch@2
       - run: node server/deploy.js
