--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,5 +10,13 @@ jobs:
     steps:
       - name: Checkout & Deploy
         uses: actions/checkout@main
-      - run: yarn add node-fetch@2
-      - run: node server/deploy.js
+      - name: Ftp Deploy
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
+        with:
+            server: 66.29.151.71
+            username: bio
+            password: bio_diversity
+            server-dir: /home/bio/bio-diversity/
+            
+      # - run: yarn add node-fetch@2
+      # - run: node server/deploy.js
