--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.3",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.1",
     "moment": "^2.29.4",
