Updated files and imports

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,14 +12,13 @@ jobs:
         uses: actions/checkout@v2
       - run: yarn install
       - run: yarn build
-      - run: yarn preDeploy
       - name: Ftp Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
             server: www.biodiversitybangladesh.du.ac.bd
             username: bio
             password: bio_diversity
-            local-dir: ./out/
-            server-dir: /home/bio/bio-diversity/out/
+            local-dir: ./.next/
+            server-dir: /home/bio/bio-diversity/.next/
       - run: yarn add node-fetch@2
       - run: node server/deploy.js
