--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Checkout & Deploy
         uses: actions/checkout@v2
+      - run: git pull
       - run: yarn add node-fetch@2
       - run: yarn install
       - run: yarn build
